<?xml version="1.0" encoding="utf-8"?>
<com.dinogroup.screen.login.LoginView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:text="@string/login_instruction_text" />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/field_background"
            android:hint="@string/hint_email_address"
            android:inputType="textEmailAddress"
            android:padding="25dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/window_background" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/field_background"
            android:hint="@string/hint_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="25dp" />
    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        style="@style/AppTheme.Button.Flat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/login_form"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/button_login_text" />
</com.dinogroup.screen.login.LoginView>
