<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dip" >

    <!-- ListRow Left side Thumbnail image -->
    <LinearLayout
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="5dip"
        android:padding="3dip" >


        <ImageView
            android:id="@+id/list_image"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_gravity="top"
            android:contentDescription="@string/app_name"
            android:src="@drawable/free_status" />

    </LinearLayout>

    <!--Table Name-->
    <TextView
        android:id="@+id/tvTableName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/thumbnail"
        android:layout_toRightOf="@+id/thumbnail"
        android:layout_marginLeft="5dip"
        android:layout_centerVertical="true"
        android:text="@string/table_name_exp"
        android:textColor="#040404"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <!-- Table Status -->
    <TextView
        android:id="@+id/tvTableStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="5dip"
        android:layout_alignTop="@+id/tvTableName"
        android:layout_alignParentRight="true"
        android:text="@string/table_stat_exp"
        android:textSize="20sp" />

</RelativeLayout>