<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="72dp"
    android:orientation="horizontal"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp">
    <TextView
        android:id="@+id/tvOrderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/order_name_exp"
        android:textColor="#040404"
        android:textSize="16sp"
        android:fontFamily="fonts/Roboto-Regular.ttf"/>

    <TextView
        android:id="@+id/tvSinglePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/order_price_exp"
        android:textSize="14sp"
        android:fontFamily="fonts/Roboto-Regular.ttf"/>

    <TextView
        android:id="@+id/tvTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_below="@id/tvSinglePrice"
        android:text="@string/order_price_exp"
        android:textSize="16sp"
        android:fontFamily="fonts/Roboto-Regular.ttf"/>

    <TextView
        android:id="@+id/tvQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="15dip"
        android:layout_alignTop="@+id/tvOrderName"
        android:layout_toLeftOf="@+id/tvSinglePrice"
        android:text="@string/order_quantity_exp"
        android:textSize="16sp"
        android:fontFamily="fonts/Roboto-Regular.ttf"/>

</RelativeLayout>